--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
     <script>
         var music = document.getElementById('bg-music');
         var albumPhotos = [
-            "image/1.jpg", "image/2.jpg", "image/3.jpg", "image/4.jpg", "image/5.jpg",
-            "image/6.jpg", "image/7.jpg", "image/8.jpg", "image/9.jpg", "image/10.jpg",
-            "image/11.jpg", "image/12.jpg", "image/13.jpg", "image/14.jpg", "image/15.jpg"
+            "image/1.JPG", "image/2.JPG", "image/3.JPG", "image/4.JPG", "image/5.JPG",
+            "image/6.JPG", "image/7.JPG", "image/8.JPG", "image/9.JPG", "image/10.JPG",
+            "image/11.JPG", "image/12.JPG", "image/13.JPG", "image/14.JPG", "image/15.JPG"
         ];
         var currentSlideIndex = 0;
 
@@ -164,3 +164,4 @@
     </script>
 </body>
 </html>
+
